exports[`Text Text component 1`] = `
<span
  style={
    Object {
      "color": undefined,
      "fontFamily": "\"Open Sans\", sans-serif",
      "fontSize": 14,
      "fontWeight": 400
    }
  }>
  Howdy!
</span>
`;

exports[`Text Text w/ Color 1`] = `
<span
  style={
    Object {
      "color": "#329ced",
      "fontFamily": "\"Open Sans\", sans-serif",
      "fontSize": 14,
      "fontWeight": 400
    }
  }>
  Howdy! (In Color)
</span>
`;

exports[`Text Text w/ Size 1`] = `
<span
  style={
    Object {
      "color": undefined,
      "fontFamily": "\"Open Sans\", sans-serif",
      "fontSize": 36,
      "fontWeight": 400
    }
  }>
  Big Howdy!
</span>
`;

exports[`Text Text w/ Weight 1`] = `
<span
  style={
    Object {
      "color": undefined,
      "fontFamily": "\"Open Sans\", sans-serif",
      "fontSize": 14,
      "fontWeight": 600
    }
  }>
  Big Howdy!
</span>
`;
